# wavelib

./: CMakeLists.txt
auxiliary/: CMakeLists.txt
install/x64/lib/cmake/: wavelib-config-release.cmake
install/x86/lib/cmake/: wavelib-config-debug.cmake  wavelib-config.cmake
src/: CMakeLists.txt
